fixtures/grammar/reject/escaped-control.fm
---
value: "escaped\tcontrol"
---
Vera Example
